1999-04-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_single_transform_list): Handle dependency
	tracking when files are created in subdirs.  Error if object in
	subdir has `..' component.

	* automake.in (initialize_global_constants): Use $(TAR), not tar.

	* automake.in (handle_ltlibraries): Allow check_LTLIBRARIES.

	* automake.in (lang_yacc_finish): Added missing `&'.

1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_configure): Replace multiple occurrences of
	@STAMP@ in the same line; completes the patch for remake-hdr.am
	below.

	* automake.in (handle_dependencies): Fix test for `autodep'
	support.

	* automake.in (handle_source_transform): Add a pfx to used_pfx
	only if it's conditional or non-empty, to reduce the number of
	empty variables.  Emit _OBJECS variable based on program name if
	no SOURCES were explicitly specified.

	* remake-hdr.am: Create the stamp file before the header file,
	and just rename it after, so that the timestamps will be correct.
	Reported by Marc Horowitz <marc@mit.edu>

	* automake.in (lang_yacc_finish): Generate and dist a `.h' for a
	`.y' iff YFLAGS or AM_YFLAGS contain `-d'.
	Reported by Jim Meyering <meyering@ascend.com>

	* automake.in (lang_yacc_finish): $hname must not contain a `.'.

1999-04-10  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (EXTRA_DIST): New macro.
	* ChangeLog.1996, ChangeLog.1998: New files.

1999-04-09  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_source_transform): Handle dist and nodist
	prefixes.
	(initialize_per_input): Initialize dist_sources.
	(check_libobjs_sources): Handle dist and nodist prefixes.
	(generate_makefile): Define DIST_SOURCES.
	* dist-vars.am (DISTFILES): Reference DIST_SOURCES, not SOURCES.

	* automake.texi (Macros): Mention AM_PROG_GCJ.
	(Java Support): New node.
	(Dist): Documented dist_ and nodist_ prefixes.

	* m4/gcj.m4 (AM_PROG_GCJ): Renamed from AC_PROG_GCJ.
