@@ -7106,7 +7106,12 @@ sub am_install_var
     push (@all, '$(' . $primary . ')')
 	if @used && $primary ne 'JAVA';
 
-    return (@result);
+    # Make the result unique.  This lets the user use conditionals in
+    # a natural way, but still lets us program lazily -- we don't have
+    # to worry about handling a particular object more than once.
+    local (%uniquify) = ();
+    grep ($uniquify{$_} = 1, @result);
+    return sort keys %uniquify;
 }
 
 
