@@ -1,5 +1,8 @@
 1999-04-10  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (am_install_var): Remove redundancies from the
+	result.  Fixes test cond8.test.
+
 	* automake.in (handle_single_transform_list): Handle dependency
 	tracking when files are created in subdirs.  Error if object in
 	subdir has `..' component.
